--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,19 +7,11 @@ packages:
   - test
 
 catalog:
-<<<<<<< HEAD
-  "@platforma-sdk/model": ^1.33.8
+  "@platforma-sdk/model": 1.33.8
   "@platforma-sdk/ui-vue": ^1.33.14
   "@platforma-sdk/workflow-tengo": ^4.7.1
   "@platforma-sdk/block-tools": ^2.5.53
   "@platforma-sdk/test": ^1.33.14
-=======
-  "@platforma-sdk/model": ^1.33.10
-  "@platforma-sdk/ui-vue": ^1.33.13
-  "@platforma-sdk/workflow-tengo": ^4.7.1
-  "@platforma-sdk/block-tools": ^2.5.52
-  "@platforma-sdk/test": ^1.33.10
->>>>>>> origin/main
   "@platforma-sdk/tengo-builder": ^2.1.7
   "@platforma-sdk/package-builder": ^2.16.0
   "@platforma-sdk/eslint-config": ^1.0.3
