isEmpty in UI, configurtation fixes

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -21,6 +21,8 @@ catalog:
   '@milaboratories/software-pframes-conv': ^2.2.2
   "@platforma-open/milaboratories.runenv-python-3": ^1.1.7
 
+  '@vueuse/core': ^13.3.0
+
   "@biowasm/aioli": ~3.2.1
 
   "vue": ^3.5.13
