--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,34 +7,32 @@ packages:
   - test
 
 catalog:
-  "@platforma-sdk/model": 1.39.0
-  "@platforma-sdk/ui-vue": ^1.39.0
-  "@platforma-sdk/workflow-tengo": ^4.9.2
-  "@platforma-sdk/block-tools": ^2.5.63
-  "@platforma-sdk/test": ^1.39.1
-  "@platforma-sdk/tengo-builder": ^2.1.12
-  "@platforma-sdk/package-builder": ^2.16.2
-  "@platforma-sdk/eslint-config": ^1.0.3
-  "@milaboratories/graph-maker": ^1.1.129
+  '@platforma-sdk/model': ^1.40.0
+  '@platforma-sdk/ui-vue': ^1.40.0
+  '@platforma-sdk/workflow-tengo': ^4.9.2
+  '@platforma-sdk/block-tools': ^2.5.63
+  '@platforma-sdk/test': ^1.39.1
+  '@platforma-sdk/tengo-builder': ^2.1.12
+  '@platforma-sdk/package-builder': ^2.16.2
+  '@platforma-sdk/eslint-config': ^1.0.3
+  '@milaboratories/graph-maker': ^1.1.129
 
   '@milaboratories/software-pframes-conv': ^2.2.2
-  "@platforma-open/milaboratories.runenv-python-3": ^1.1.16
+  '@platforma-open/milaboratories.runenv-python-3': ^1.1.16
 
   '@vueuse/core': ^13.3.0
 
-  "@biowasm/aioli": ~3.2.1
+  'vue': ^3.5.13
+  'vue-tsc': ^2.2.8
 
-  "vue": ^3.5.13
-  "vue-tsc": ^2.2.8
-  
-  "typescript": ~5.5.4
-  "tsup": ~8.3.5
-  "turbo": ^2.5.4
+  'typescript': ~5.5.4
+  'tsup': ~8.3.5
+  'turbo': ^2.5.4
 
-  "vite": ^6.2.2
-  "vitest": ^2.1.8
-  "@vitejs/plugin-vue": ^5.2.4
+  'vite': ^6.2.2
+  'vitest': ^2.1.8
+  '@vitejs/plugin-vue': ^5.2.4
 
-  "js-yaml": ^4.1.0
+  'js-yaml': ^4.1.0
 
-  "@changesets/cli": ^2.29.4
+  '@changesets/cli': ^2.29.4
