fix sw package.json

--- a/software/umap/package.json
+++ b/software/umap/package.json
@@ -11,22 +11,19 @@
     "prepublishOnly": "pl-pkg publish packages"
   },
   "block-software": {
-    "artifacts": {
-      "umap-artifact": {
-        "type": "python",
-        "registry": "platforma-open",
-        "environment": "@platforma-open/milaboratories.runenv-python-3:3.12.6",
-        "dependencies": {
-          "toolset": "pip",
-          "requirements": "requirements.txt"
-        },
-        "root": "./src"
-      }
-    },
     "entrypoints": {
       "main": {
         "binary": {
-          "artifact": "umap-artifact",
+          "artifact": {
+            "type": "python",
+            "registry": "platforma-open",
+            "environment": "@platforma-open/milaboratories.runenv-python-3:3.12.6",
+            "dependencies": {
+              "toolset": "pip",
+              "requirements": "requirements.txt"
+            },
+            "root": "./src"
+          },
           "cmd": [
             "python",
             "{pkg}/main.py"
