--- a/software/umap/package.json
+++ b/software/umap/package.json
@@ -17,7 +17,7 @@
           "artifact": {
             "type": "python",
             "registry": "platforma-open",
-            "environment": "@platforma-open/milaboratories.runenv-python-3:3.12.10",
+            "environment": "@platforma-open/milaboratories.runenv-python-3:3.12.10-rapids",
             "dependencies": {
               "toolset": "pip",
               "requirements": "requirements.txt"
