--- a/software/umap/src/requirements.txt
+++ b/software/umap/src/requirements.txt
@@ -3,15 +3,16 @@ numpy==2.0.2
 scikit-learn==1.7.2
 scipy==1.16.2
 umap-learn==0.5.7
-cudf-cu12==25.4.0,
-dask-cudf-cu12==25.4.0,
-cuml-cu12==25.4.0,
-cugraph-cu12==25.4.0,
-nx-cugraph-cu12==25.4.0,
-cuspatial-cu12==25.4.0,
-cuproj-cu12==25.4.0,
-cuxfilter-cu12==25.4.0,
-cucim-cu12==25.4.0,
-pylibraft-cu12==25.4.0,
-raft-dask-cu12==25.4.0,
+torch==2.7.0
+cudf-cu12==25.4.0
+dask-cudf-cu12==25.4.0
+cuml-cu12==25.4.0
+cugraph-cu12==25.4.0
+nx-cugraph-cu12==25.4.0
+cuspatial-cu12==25.4.0
+cuproj-cu12==25.4.0
+cuxfilter-cu12==25.4.0
+cucim-cu12==25.4.0
+pylibraft-cu12==25.4.0
+raft-dask-cu12==25.4.0
 cuvs-cu12==25.4.0
