--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@milaboratories/graph-maker": "catalog:",
+    "@milaboratories/multi-sequence-alignment": "catalog:",
     "@platforma-open/milaboratories.clonotype-space.model": "workspace:*",
     "@platforma-sdk/model": "catalog:",
     "@platforma-sdk/ui-vue": "catalog:",
