--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,6 +24,7 @@ jobs:
       - init
     uses: milaboratory/github-ci/.github/workflows/node-simple-pnpm.yaml@v4
     with:
+      gha-runner-label: 'ubuntu-large-amd64'
       app-name: 'Block: clonotype-space'
       app-name-slug: 'block-clonotype-space'
       node-version: '20.x'
