--- a/software/umap/package.json
+++ b/software/umap/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "description": "Block Software",
   "scripts": {
-    "do-pack": "rm -f *.tgz && pl-pkg build && pnpm pack && mv platforma-open*.tgz package.tgz",
+    "do-pack": "shx rm -f *.tgz && pl-pkg build && pnpm pack && shx mv platforma-open*.tgz package.tgz",
     "changeset": "changeset",
     "version-packages": "changeset version",
     "build": "pl-pkg build",
