--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@milaboratories/graph-maker": "catalog:",
     "@milaboratories/multi-sequence-alignment": "catalog:",
+    "@milaboratories/strings": "catalog:",
     "@platforma-open/milaboratories.clonotype-space.model": "workspace:*",
     "@platforma-sdk/model": "catalog:",
     "@platforma-sdk/ui-vue": "catalog:",
