--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@milaboratories/graph-maker": "catalog:",
+    "@milaboratories/helpers": "catalog:",
     "@milaboratories/multi-sequence-alignment": "catalog:",
     "@milaboratories/strings": "catalog:",
     "@platforma-open/milaboratories.clonotype-space.model": "workspace:*",
